# data-engineering-roadmap

./: README.md  pyproject.toml
bootcamp/: pyproject.toml
bootcamp/class01/: README.md  challenge.py
bootcamp/class02/: README.md  challenge.py  issue-example.py  typeerror.py
bootcamp/class02/try-except/: number-classifier.py  palindrome-checker.py  simple-calculator.py  temperature-converter.py  type-conversion-validation.py
bootcamp/class03/: README.md  challenge.py
bootcamp/class04/: README.md  file-reading.py  normalize-name.py  sort.py  sorting.py  type-hint-dict-json.py
bootcamp/class05/: README.md
bootcamp/class06/: README.md
bootcamp/class07/: README.md  challenge.py  client.py  etl.py  main.py  pyproject.toml
bootcamp/class08/: README.md  data.csv  data.parquet  etl.py  etl_test.py  extract_example.py  initial_setup.md  pipeline.py  pyproject.toml
bootcamp/class08/data/: day03.json
bootcamp/class09/: README.md  etl.py  pyproject.toml  utils_log.py
bootcamp/class09/data/: day01.json  day02.json
bootcamp/class10/: README.md
bootcamp/class11/: README.md
bootcamp/class11/oop/: OOP.md
bootcamp/class11/oop/01-basic/: class.py  exemple.csv  functional.py
bootcamp/class11/oop/02-encapsulation/: connection.py  encaps.py  postgre.py  sqlite.py
bootcamp/class12/: README.md  recursive.py
bootcamp/class13/: README.md
bootcamp/class13/Part2/: README.md
bootcamp/class13/basics/: func_csv.py  person-class.py  person.py
bootcamp/class13/class-effective/: csv-test.py
bootcamp/class14/src/: __main__.py
bootcamp/class15/FakeApi/: start.py
(+13 files in other folders)
