[tool.poetry]
name = "data-engineering-roadmap"
version = "0.1.0"
description = ""
authors = ["Gabriel Santello <gvsantello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
psycopg2 = "^2.9.9"
boto3 = "^1.34.72"
schedule = "^1.2.1"
requests = "^2.31.0"
fastapi = "^0.110.0"
faker = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
