[tool.poetry]
name = "class08"
version = "0.1.0"
description = ""
authors = ["Gabriel Santello <gvsantello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
pandera = "^0.18.0"
fastparquet = "^2024.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
