[tool.poetry]
name = "class09"
version = "0.1.0"
description = ""
authors = ["Gabriel Santello <gvsantello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
